syntax = "proto3";
// edition = "2023";
package onec;
option go_package = "github.com/COTBU/sotbi.lib/api/onec";
// import "api/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

// Определение перечисления CustomerType
enum CustomerType {
  DEBTOR = 0;
  COUNTERPARTY = 1;
}

message ParseRequest {
  // Уникальный идентификатор запроса
  bytes request_id = 1;
  // Ссылка на файл, который нужно распарсить
  string file_url = 2;
  // Тип клиента, для которого выполняется парсинг
  CustomerType customer_type = 3;
  // Заказчик
  uint64 creator_id = 4;
  //  Должник
  optional uint64 debtor_id = 5;
  // РасчСчет
  optional string account = 6;
}

message ParseResponse {
  // Уникальный идентификатор запроса
  bytes request_id = 1;
  CustomerType customer_type = 2;
  oneof item {
    ExchangeFile file = 3;
    AccountBalance balance = 5;
    PaymentDocument document = 6;
  }
  // Ссылка на распарсенный файл
  string file_url = 7;
  // Заказчик
  uint64 creator_id = 8;
  //  Должник
  optional uint64 debtor_id = 9;
}

// ExchangeFile holds the metadata of a 1C-ClientBank exchange file.
message ExchangeFile {
  uint64 id = 1;
  // ВерсияФормата
  string format_ver = 2;
  // Кодировка
  string encoding = 3;
  // Отправитель
  string sender = 4;
  // Получатель
  string receiver = 5;
  // ДатаСоздания (DD.MM.YYYY HH:MM:SS)
  google.protobuf.Timestamp created_datetime = 6;
  // ДатаНачала (DD.MM.YYYY)
  google.protobuf.Timestamp start_date = 7;
  // ДатаКонца (DD.MM.YYYY)
  google.protobuf.Timestamp end_date = 8;
  // РасчСчет — список расчётных счетов
  repeated string account = 9;
}

// AccountBalance represents opening and closing balances for an account.
message AccountBalance {
  uint64 id = 1;
  uint64 exchange_file_id = 2;
  // ДатаНачала (DD.MM.YYYY)
  google.protobuf.Timestamp start_date = 3;
  // ДатаКонца (DD.MM.YYYY)
  google.protobuf.Timestamp end_date = 4;
  // РасчСчет
  string account = 5;
  // НачальныйОстаток
  double initial_balance = 6;
  // ВсегоПоступило
  double income = 7;
  // ВсегоСписано
  double write_off = 8;
  // КонечныйОстаток
  double final_balance = 9;
}

// PaymentDocument представляет одну запись документа обмена.
message PaymentDocument {
  uint64 account_balance_id = 1;
  // СекцияДокумент
  string document_type = 2;
  // Номер
  string number = 3;
  // Дата
  google.protobuf.Timestamp date = 4;
  // ДатаСписано
  optional google.protobuf.Timestamp written_off_date = 5;
  // ДатаПоступило
  optional google.protobuf.Timestamp income_date = 6;
  // Сумма
  double summ = 7;
  // КвитанцияДата + КвитанцияВремя (DD.MM.YYYY HH:MM:SS)
  optional google.protobuf.Timestamp rect_datetime = 8;
  // КвитанцияСодержание
  optional string rect_content = 10;
  // ПлательщикСчет
  string payer_account = 11;
  // Плательщик
  string payer = 12;
  // ПлательщикИНН
  string payer_inn = 13;
  // ПлательщикКПП
  optional string payer_kpp = 14;
  // Плательщик1…4
  optional string payer1 = 16;
  optional string payer2 = 17;
  optional string payer3 = 18;
  optional string payer4 = 19;
  // ПлательщикРасчСчет
  string payer_current_account = 20;
  // ПлательщикБанк1…2
  string payer_bank1 = 21;
  optional string payer_bank2 = 22;
  // ПлательщикБИК
  string payer_bik = 23;
  // ПлательщикКорсчет
  string payer_corr_account = 24;
  // ПолучательСчет
  string receiver_account = 25;
  // Получатель
  string receiver = 26;
  // ПолучательИНН
  string receiver_inn = 27;
  // ПолучательКПП
  optional string receiver_kpp = 28;
  // Получатель1…4
  optional string receiver1 = 29;
  optional string receiver2 = 30;
  optional string receiver3 = 31;
  optional string receiver4 = 32;
  // ПолучательРасчСчет
  string receiver_current_account = 33;
  // ПолучательБанк1…2
  string receiver_bank1 = 34;
  optional string receiver_bank2 = 35;
  // ПолучательБИК
  string receiver_bik = 36;
  // ПолучательКорсчет
  string receiver_corr_account = 37;
  // ВидПлатежа
  optional string payment_type = 38;
  // КодНазПлатежа
  optional string payment_purpose_code = 39;
  // Код (UIN)
  optional string uin = 40;
  // НазначениеПлатежа
  string payment_purpose = 41;
  // НазначениеПлатежа1…6
  optional string payment_purpose1 = 42;
  optional string payment_purpose2 = 43;
  optional string payment_purpose3 = 44;
  optional string payment_purpose4 = 45;
  optional string payment_purpose5 = 46;
  optional string payment_purpose6 = 47;
  // СтатусСоставителя
  optional string compiler_status = 48;
  // ОКАТО
  optional string okato = 49;
  // ПоказательКБК
  optional string indicator_kbk = 50;
  // ПоказательОснования
  optional string indicator_basics = 51;
  // ПоказательПериода
  optional string indicator_period = 52;
  // ПоказательНомера
  optional string indicator_number = 53;
  // ПоказательДаты
  optional google.protobuf.Timestamp indicator_date = 54;
  // ПоказательТипа
  optional string indicator_type = 55;
  // Очередность
  optional uint32 priority = 56;
  // ВидОплаты
  optional string defrayal_type = 57;
  // СрокАкцепта
  optional string acceptance_term = 58;
  // ВидАккредитива
  optional string type_letter_credit = 59;
  // СрокПлатежа
  optional string payment_term = 60;
  // УсловиеОплаты1…3
  optional string payment_condition1 = 61;
  optional string payment_condition2 = 62;
  optional string payment_condition3 = 63;
  // ПлатежПоПредст
  optional string payment_by = 64;
  // ДополнУсловия
  optional string additional_terms = 65;
  // НомерСчетаПоставщика
  optional string supplier_account_number = 66;
  // ДатаОтсылкиДок
  optional google.protobuf.Timestamp document_sending_date = 67;
}
